--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # gitignore
 
 # Python-related
-__pycache__/            # Byte-compiled files
+/website/__pycache__/            # Byte-compiled files
 *.py[cod]               # Compiled Python files
 *.pyo                   # Optimized Python files
 *.pyd                   # Compiled Python extensions
